// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSAvatar Base 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <h1
      style={
        Object {
          "marginBottom": "10px",
        }
      }
    >
      Base Avatar
    </h1>
    <div>
      <span
        className="slds-avatar slds-avatar_circle slds-avatar_medium"
      >
        <img
          alt="Person Name"
          onError={[Function]}
          src="https://lightningdesignsystem.com/assets/images/avatar2.jpg"
          title="user avatar"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSAvatar Entity Icon 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <h1
      style={
        Object {
          "marginBottom": "10px",
        }
      }
    >
      Entity Icon Avatar
    </h1>
    <div>
      <span
        className="slds-avatar slds-avatar_medium"
      >
        <span
          className="slds-icon_container slds-icon-standard-account"
        >
          <svg
            aria-hidden="true"
            className="slds-icon"
          >
            <use
              href="/assets/icons/standard-sprite/svg/symbols.svg#account"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Avatar icon avatar
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSAvatar Entity Initials 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <h1
      style={
        Object {
          "marginBottom": "10px",
        }
      }
    >
      Entity Initials Avatar
    </h1>
    <div>
      <span
        className="slds-avatar slds-avatar_medium"
      >
        <abbr
          className="slds-avatar__initials slds-icon-standard-account"
          title="Acme Communications"
        >
          AC
        </abbr>
      </span>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSAvatar Inverse User Initials 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <h1
      style={
        Object {
          "marginBottom": "10px",
        }
      }
    >
      Inversed User Initials Avatar
    </h1>
    <div>
      <span
        className="slds-avatar slds-avatar_circle slds-avatar_medium"
      >
        <abbr
          className="slds-avatar__initials slds-avatar__initials_inverse slds-icon-standard-user"
          title="Annie Wilson"
        >
          AW
        </abbr>
      </span>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSAvatar User Icon 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <h1
      style={
        Object {
          "marginBottom": "10px",
        }
      }
    >
      User Icon Avatar
    </h1>
    <div>
      <span
        className="slds-avatar slds-avatar_circle slds-avatar_medium"
      >
        <span
          className="slds-icon_container slds-icon-standard-user"
        >
          <svg
            aria-hidden="true"
            className="slds-icon"
          >
            <use
              href="/assets/icons/standard-sprite/svg/symbols.svg#user"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            User Icon Avatar
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSAvatar User Initials 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <h1
      style={
        Object {
          "marginBottom": "10px",
        }
      }
    >
      User Initials Avatar
    </h1>
    <div>
      <span
        className="slds-avatar slds-avatar_circle slds-avatar_medium"
      >
        <abbr
          className="slds-avatar__initials slds-icon-standard-user"
          title="Annie Wilson"
        >
          AW
        </abbr>
      </span>
    </div>
  </div>
</div>
`;
